@@ -1,5 +1,6 @@
 Version 1.1.0-CVS (?? ??? 2005)
   - Fixed the following bug reports on SourceForge:
+      1209649: Undefined variable in html_for_event_day_at_a_glance
       1205680: upcoming.php was including unapproved.  will now use
         user preferences for displaying unapproved.
       1205151: use of undefined variable in edit_entry.php
